--- a/pssharp-fe/Cargo.toml
+++ b/pssharp-fe/Cargo.toml
@@ -12,4 +12,15 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["HtmlElement", "Document", "console"] }
+web-sys = { version = "0.3", features = [
+    "HtmlElement",
+    "Document",
+    "console",
+    "DomTokenList",
+    "Element",
+    "MediaQueryList",
+    "Window",
+    "Storage",
+    "Node",
+    "MouseEvent",
+] }
