add wasm (build/watch) to dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
 version: "3.0"
 
 services:
-  web:
+  www:
     image: stroniax.github.io
     build:
       dockerfile_inline: FROM httpd:2.4
       context: .
     ports:
-      - 8080:80
+      - 0.0.0.0:8080:80
     hostname: stroniax.github.io
     volumes:
       - .:/usr/local/apache2/htdocs/
+  wasm:
+    image: stroniax/wasm-pack-watch
+    volumes:
+      - ./pssharp-fe:/watch
+      - ./pssharp-fe/pkg:/build
